Bugfixing and Refactoring

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 .gitignore      export-ignore
 *.map           export-ignore
 .vscode/        export-ignore
+.assets/        export-ignore
 build/          export-ignore
 dist/           export-ignore
 node_modules/   export-ignore
